chromeos: set kEmbedType property for DetachedTitleAreaRendererForClient

All other code paths properly set it. Without this we hit DCHECKs as
the type isn't set.

BUG=786544
TEST=covered by tests

Change-Id: Ia3837afa9641c6fef83ed4441dbcb5ab1d5d9cd4
Reviewed-on: https://chromium-review.googlesource.com/794520
Reviewed-by: Elliot Glaysher <erg@chromium.org>
Commit-Queue: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#519842}
Former-commit-id: e645f7ae50fd939ed5c31ebbb4d3185cfc7e7ed0