ash/frame/detached_title_area_renderer.cc
@@ -99,6 +99,8 @@ DetachedTitleAreaRendererForClient::DetachedTitleAreaRendererForClient(
       CreateInitParams("DetachedTitleAreaRendererForClient");
   views::NativeWidgetAura* native_widget =
       new views::NativeWidgetAura(widget_, true);
+  native_widget->GetNativeView()->SetProperty(
+      aura::client::kEmbedType, aura::client::WindowEmbedType::TOP_LEVEL_IN_WM);
   aura::SetWindowType(native_widget->GetNativeWindow(),
                       ui::mojom::WindowType::POPUP);
   ApplyProperties(native_widget->GetNativeWindow(),
